test/IRGen/temporary_allocation/size_too_large.code
// RUN: not %target-language-frontend -primary-file %s -O -emit-ir -o /dev/null 2>&1 | %FileCheck %s

@_silgen_name("blackHole")
fn blackHole(_ value: UnsafeMutableRawPointer?) -> Void

withUnsafeTemporaryAllocation(of: Int.this, capacity: .max) { buffer in
    blackHole(buffer.baseAddress)
}
// CHECK: error: allocation byte count too large
